add link to first quiz

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ku" dir="rtl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,15 @@
     <!-- Google Fonts: Tajawal (New) & Noto Naskh Arabic -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&family=Noto+Naskh+Arabic:wght@400;600;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700&family=Noto+Naskh+Arabic:wght@400;600;700&display=swap"
+        rel="stylesheet">
     <!-- Font Awesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Link to your CSS file -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="dark-mode">
     <!-- Animated Background -->
     <div id="background-stars"></div>
@@ -44,6 +48,8 @@
             </div>
             <p class="start-instructions">
                 ئامادەیت بۆ گەشتێک بەناو ژیانی خۆشەویستماندا؟<br>
+                ٦١٥ پرسیاری جۆری هەڵبژاردە<br>
+                لە کۆتایی بینی ئەنجام و سەرجەم پرسیار و وەڵامەکانت و وەڵامی دروست<br>
                 بۆ هەر پرسیارێک ٣٠ چرکەت لەبەردەستە.
             </p>
             <button id="start-btn">دەستپێکردن</button>
@@ -54,7 +60,9 @@
             <div class="quiz-status">
                 <div id="progress">
                     <p id="progress-text"></p>
-                    <div id="progress-bar"><div id="progress-bar-full"></div></div>
+                    <div id="progress-bar">
+                        <div id="progress-bar-full"></div>
+                    </div>
                 </div>
                 <div id="timer">
                     <svg class="timer-svg" width="70" height="70" viewBox="0 0 70 70">
@@ -64,7 +72,7 @@
                     <span id="timer-text">30</span>
                 </div>
             </div>
-            
+
             <h2 id="question" class="question-title"></h2>
             <div id="options" class="options-container"></div>
             <button id="finish-btn">تەواوکردنی تاقیکردنەوە</button>
@@ -77,16 +85,28 @@
     <!-- Footer Section -->
     <footer class="main-footer">
         <div class="footer-credits">
+            <a href="https://cortexatechnology.github.io/prophet-muhammad-gashty-nasin-quiz/" class="cross-link-btn"
+                title="بڕۆ بۆ پڕۆژەی یەکەم">
+                <i class="fa-solid fa-arrow-left"></i>
+                <span>پڕۆژەی یەکەم</span>
+            </a>
             <p>پەرەپێدان و دیزاین لەلایەن</p>
             <h3>Hoshyar Hussein Mohammed</h3>
             <div class="social-links">
-                 <a href="https://linkbio.co/HoshyarHussein" target="_blank" title="Linktree"><i class="fa-solid fa-link"></i></a>
-                 <a href="https://www.facebook.com/share/16xbqsC3Lg/" target="_blank" title="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
-                 <a href="https://www.instagram.com/cortexatech" target="_blank" title="Instagram"><i class="fa-brands fa-instagram"></i></a>
-                 <a href="https://www.tiktok.com/@cortexatech" target="_blank" title="TikTok"><i class="fa-brands fa-tiktok"></i></a>
-                 <a href="https://www.snapchat.com/add/cortexatech" target="_blank" title="Snapchat"><i class="fa-brands fa-snapchat"></i></a>
-                 <a href="https://t.me/CortexaTech" target="_blank" title="Telegram"><i class="fa-brands fa-telegram"></i></a>
-                 <a href="https://www.youtube.com/@Cortexa-Technology" target="_blank" title="YouTube"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://linkbio.co/HoshyarHussein" target="_blank" title="Linktree"><i
+                        class="fa-solid fa-link"></i></a>
+                <a href="https://www.facebook.com/share/16xbqsC3Lg/" target="_blank" title="Facebook"><i
+                        class="fa-brands fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/cortexatech" target="_blank" title="Instagram"><i
+                        class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.tiktok.com/@cortexatech" target="_blank" title="TikTok"><i
+                        class="fa-brands fa-tiktok"></i></a>
+                <a href="https://www.snapchat.com/add/cortexatech" target="_blank" title="Snapchat"><i
+                        class="fa-brands fa-snapchat"></i></a>
+                <a href="https://t.me/CortexaTech" target="_blank" title="Telegram"><i
+                        class="fa-brands fa-telegram"></i></a>
+                <a href="https://www.youtube.com/@Cortexa-Technology" target="_blank" title="YouTube"><i
+                        class="fa-brands fa-youtube"></i></a>
             </div>
         </div>
         <div class="footer-bottom">
@@ -101,4 +121,5 @@
     <!-- Link to your JS file -->
     <script src="script.js"></script>
 </body>
+
 </html>
